<resources>
    <string name="app_name">任你记</string>
    <string name="tab_home">首页</string>
    <string name="tab_works">作品</string>
    <string name="tab_order">订单</string>
    <string name="tab_me">我的</string>
    <string name="tab_more">更多</string>
    <string name="home_left_name">我负责的</string>
    <string name="home_middle_name">我发起的</string>
    <string name="home_right_name">我关注的</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="fast_register">立即注册</string>
    <string name="other_login">其他登录方式</string>
    <string name="input_telephone_init">邮箱，如：abc@163.com</string>
    <string name="password_init">密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">正在加载</string>
    <string name="dialog_info_save_works">正在保存作品</string>
    <string name="loading_template">正在加载模板数据</string>
    <string name="one_spot">.</string>
    <string name="two_spot">..</string>
    <string name="three_spot">&#8230;</string>
    <string name="title_alert">提示信息</string>
    <string name="saving_works">正在保存作品</string>
    <string name="select_the_provinces">请选择省市区</string>
    <string name="down_state">正在下载：%s</string>
    <string name="download_over">下载完成</string>
    <string name="file_download_over">文件已下载完毕</string>
    <string name="download_title">正在下载%s</string>
    <string name="ready_download">准备下载</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="no_immediate_update">发现有新版本是否立即更新</string>
    <string name="check_for_updates">检查更新</string>
    <string name="later_on">稍后再说</string>
    <string name="now_updates">马上升级</string>
    <string name="load_msg">呃,页面加载失败</string>
    <string name="load_retry">重试</string>
    <string name="no_data">暂无数据</string>
    <string name="no_net">网络根本没连，赶紧检查</string>
    <string name="mini_one">亲，数量至少为1哦~</string>
    <string name="tip_double_click_exit">再次点击退出任你记</string>
    <string name="you_no_login">您没有登录，请登录后在操作</string>
    <string name="prompt_message">提示</string>
    <string name="now_login">马上登录</string>
    <string name="hint_remain_count">您还可以输入%s字</string>
    <string name="hint_max_length_msg">最多只能输入%s字</string>
    <string name="network_name_add">当前网络名称：</string>

</resources>
