<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/view_title_home" />

    <LinearLayout
        android:id="@+id/home_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/line_s_bg"
        android:padding="@dimen/main_margin">

        <TextView
            android:id="@+id/home_left_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_left_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/home_middle_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_middle_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/home_right_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_right_name"
            android:textSize="16sp" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/home_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>