<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/left_menu_bg"
    tools:context="com.renniji.mytask.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/logo" />

            <RelativeLayout
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin">

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="@string/input_telephone_init"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingRight="35dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/main_text_dark"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/account_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@mipmap/input_delete" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin">

                <include layout="@layout/view_s_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="@string/password_init"
                    android:inputType="textPassword"
                    android:paddingRight="35dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/main_text_dark"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/password_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@mipmap/input_delete" />

            </RelativeLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:layout_marginTop="27dp">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@+id/other_login"
                    android:background="@color/text_color_gray" />

                <TextView
                    android:id="@+id/other_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/other_login"
                    android:textColor="@color/text_color_gray"
                    android:textSize="18sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/other_login"
                    android:background="@color/text_color_gray" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/wechat_login"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/wechat_icon" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin">

        <TextView
            android:id="@+id/find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="27dp"
            android:text="@string/forget_password"
            android:textColor="@color/text_color_gray_b"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:text="@string/fast_register"
            android:textColor="@color/text_color_gray_b"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>
